# microservices-project-multi-languange

./: docker-compose-infra.yml  docker-compose.auth.yml  docker-compose.student.yml
academic-report-service/: Dockerfile
auth-service/: Dockerfile  composer.json  nginx.conf
auth-service/app/Exceptions/: Handler.php
auth-service/app/Http/Controllers/: AuthController.php
auth-service/app/Http/Middleware/: CustomAuthenticate.php
auth-service/app/Models/: User.php
auth-service/app/Providers/: RabbitMQServiceProvider.php
auth-service/app/Services/: EventPublisherService.php
auth-service/bootstrap/: app.php
auth-service/config/: app.php  rabbitmq.php
auth-service/resources/views/: welcome.blade.php
auth-service/routes/: api.php
course-service/: Dockerfile
frontend/: Dockerfile
notification-service/: Dockerfile
payment-service/: Dockerfile
student-service/: .env  Cargo.toml  Dockerfile
student-service/migrations/: create_students_table.sql
student-service/src/: api.rs  config.rs  db.rs  main.rs  models.rs  rabbitmq.rs
