[package]
name = "student-service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres", "chrono", "offline"] }
lapin = "2.1.1"
dotenv = "0.15.0"
env_logger = "0.10.0"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"